2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* features.ht (Links): Add smart auto-responding.

2002-08-19  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* config-links.h: Add sidebar link to TMDA Filter Sources.
	
2002-08-18  Tim Legant  <tim@catseye.net>

	* config-filter.ht: Significantly shortened file.  Added
	documentation for macros, included filters and variable
	interpolation.  Moved source- and match-specific documentation to
	new file, filter-sources.ht.

	* filter-sources.ht: New file.

2002-08-13  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* inuse.ht (Links): Add dungog.net.

2002-08-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* press.ht: New page.

2002-08-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Gravital.net.

2002-07-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Internet Nebraska, 2ndmail.com, and
	eScrubber.
	
2002-07-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention tmda.el.

2002-07-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd.ht: Document -A option.

2002-07-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht: Update links for tmda.net.

2002-07-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht: Add AIMS.

2002-07-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention tmda-ofmipd.

	* features.ht (Links): Ditto.

	* howto-links.h, howtos.ht, howtos.html, tmda-ofmipd.ht,
	tmda-ofmipd.html: New files.
	
2002-07-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Raymond Hosting.

2002-07-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* inuse.ht (Links): Add Gmane.

2002-06-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Remove faq.ht, faq.html.
